--- a/Project.toml
+++ b/Project.toml
@@ -5,3 +5,4 @@ PlutoUI = "7f904dfe-b85e-4ff6-b463-dae2292396a8"
 RandomWalker = "7fedaefd-d960-4ead-b78b-a12e7d3c4dc2"
 T6SSModellingStochasticTimerRW = "0c0abd89-3d00-452f-bfc2-ba0bbfa02c6f"
 Telegraph = "d9abfcff-0c94-4277-a476-16906862b370"
+ThreadsX = "ac1d9e8a-700a-412c-b207-f0111f4b6c0d"
